common/blog/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: ni-svc
  labels:
    app.kubernetes.io/name: blog
    app.kubernetes.io/instance: blog
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: blog
      app.kubernetes.io/instance: blog
  template:
    metadata:
      labels:
        app.kubernetes.io/name: blog
        app.kubernetes.io/instance: blog
    spec:
      containers:
        - name: blog
          image: ghcr.io/nijunfeng234154/myblog:latest@sha256:d65706c06f95bc03fc6ebd50551d44bfd9937cfc8505ef039ed375181c94c64e
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
