common/blog/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: ni-svc
  labels:
    app.kubernetes.io/name: blog
    app.kubernetes.io/instance: blog
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: blog
    app.kubernetes.io/instance: blog
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
